[tool.poetry]
name = "d-auto-checker"
version = "0.1.0"
description = ""
authors = ["tanimutomo <tanimutomo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "0.14.0"
moment = "0.10"
pyppeteer = "0.2.2"
slackweb = "1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
